; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/msconfig_new/comctl32ex/extr_treeview.c_TreeView_GetNext.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/msconfig_new/comctl32ex/extr_treeview.c_TreeView_GetNext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @TreeView_GetNext(i32 %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  store i32* null, i32** %3, align 8
  br label %32

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = load i32*, i32** %5, align 8
  %13 = call i32* @TreeView_GetChild(i32 %11, i32* %12)
  store i32* %13, i32** %6, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %18

16:                                               ; preds = %10
  %17 = load i32*, i32** %6, align 8
  store i32* %17, i32** %3, align 8
  br label %32

18:                                               ; preds = %10
  %19 = load i32, i32* %4, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = call i32* @TreeView_GetNextSibling(i32 %19, i32* %20)
  store i32* %21, i32** %6, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %24, label %26

24:                                               ; preds = %18
  %25 = load i32*, i32** %6, align 8
  store i32* %25, i32** %3, align 8
  br label %32

26:                                               ; preds = %18
  %27 = load i32, i32* %4, align 4
  %28 = load i32, i32* %4, align 4
  %29 = load i32*, i32** %5, align 8
  %30 = call i32* @TreeView_GetParent(i32 %28, i32* %29)
  %31 = call i32* @TreeView_GetNextSibling(i32 %27, i32* %30)
  store i32* %31, i32** %3, align 8
  br label %32

32:                                               ; preds = %26, %24, %16, %9
  %33 = load i32*, i32** %3, align 8
  ret i32* %33
}

declare dso_local i32* @TreeView_GetChild(i32, i32*) #1

declare dso_local i32* @TreeView_GetNextSibling(i32, i32*) #1

declare dso_local i32* @TreeView_GetParent(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
